# BCI_motion_clouds

./: .gitignore  OLD_Experiment_Generation_MC.ipynb  README.md  pyproject.toml
demo/: Experiment_texture_generation.ipynb  Generation_dynamical_texture.py  compound_gui.py  config.py  create_mp4.py  load_npz.ipynb  motion_clouds_demo.ipynb  runtime_check.ipynb  simple_gui.py
dyntex/: DriftingGrating.py  DynTex.py  MotionCloud.py  __init__.py  utils.py
