[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "dyntex"
version = "0.1.0"
description = "Dynamic texture and MotionCloud stimulus generation tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[tool.setuptools]
packages = ["dyntex"]
